--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>maven-parent</artifactId>
+		<groupId>net.necomimi</groupId>
+		<version>1.0</version>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
   <groupId>net.necomimi</groupId>
-  <artifactId>maven-parent</artifactId>
+  <artifactId>maven-android-parent</artifactId>
   <packaging>pom</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>maven-parent</name>
-  <description>necomimi.net maven parent setting project.</description>
-  <url>http://maven.apache.org</url>
-  <organization>
-  	<name>mio-design works</name>
-  	<url>http://necomimi.net/</url>
-  </organization>
+  <version>1.0</version>
+  <name>maven-android-parent</name>
+  <description>necomimi.net maven android parent setting project.</description>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 </project>
